# tjabane.agent.julius

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yml  function_app.py  host.json  pyproject.toml  requirements.txt  sonar-project.properties
.github/workflows/: ci-cd.yml
agent/: agent.py
agent/prompts/: system.md
agent/tools/: __init__.py  banking.py  deps.py  memory.py  reporting.py  scheduling.py  skills.py
agent/tools/reporting/: __init__.py
docs/: architecture.py  code-quality.md  observability.md  solution-diagram.md  use-case-diagrams.md  use-cases.md
evals/: test_agent_payment_safety.py
functions/webhook/: __init__.py
infra/: deploy.ps1  main.bicep
infra/modules/: communication.bicep  cosmos.bicep  function-app.bicep  keyvault.bicep  storage.bicep
infrastructure/: deploy.ps1  main.bicep
infrastructure/modules/: communication.bicep  container-app.bicep  cosmos.bicep  function-app.bicep  keyvault.bicep  monitoring.bicep  storage.bicep
models/: __init__.py  memory.py  report.py  reporting.py  schedule.py  skill.py
openspec/: config.yaml
openspec/changes/add-otel-observability/: design.md  proposal.md  tasks.md
openspec/specs/observability/: spec.md
repositories/: __init__.py  knowledge.py  memory.py  reports.py  schedules.py  sessions.py  skills.py
scripts/: agent_chat.py  init_local_cosmos.py
services/: __init__.py  investec.py  investec_client.py
src/: main.py
src/agent/: agent.py
src/agent/tools/: __init__.py  deps.py
src/functions/scheduler/: __init__.py
src/functions/webhook/: __init__.py
src/julius_agent/: agent.py
src/julius_agent/tools/: __init__.py
src/julius_application/: api.py  fastapi_app.py  health.py  http_routes.py  observability.py  scheduler.py
src/julius_application/agent/: agent.py
src/julius_domain/models/: __init__.py  agent.py  knowledge.py  reporting.py
src/julius_domain/repositories/: agent.py  knowledge.py  reporting.py
src/julius_services/: __init__.py  investec_client.py
src/julius_services/communication/: email_service.py  protocols.py  providers.py  twilio_client.py
src/julius_services/finance/: investec_client.py
src/krabs_agent/: agent.py  agent_runner.py  observability.py  runtime.py
src/krabs_agent/prompts/: system.md
src/krabs_agent/tools/: __init__.py  deps.py
src/krabs_application/: fastapi_app.py  health.py  http_routes.py  scheduler.py
src/krabs_domain/contracts/: __init__.py  banking.py  email.py
src/krabs_domain/models/: __init__.py  agent.py  reporting.py
src/krabs_domain/repositories/: __init__.py  agent.py  base.py  knowledge.py  reporting.py
src/krabs_observability/: __init__.py  adapters.py  agent.py  context.py  instrumentation.py  semantic.py  telemetry.py
src/krabs_services/: __init__.py
src/krabs_services/communication/: __init__.py  email_service.py  protocols.py  providers.py  twilio_client.py
src/krabs_services/finance/: investec_client.py
src/krabs_tools/: __init__.py  registry.py
src/krabs_tools/schema/: __init__.py  banking_payments.py  datetime.py  investec_accounts.py  investec_documents.py  reporting.py
src/krabs_tools/tools/: __init__.py  datetime.py  factories.py  investec_accounts.py  investec_documents.py  investec_payments.py  reporting.py
src/models/: agent.py  knowledge.py
src/repositories/: agent.py  reporting.py
src/services/: __init__.py
tests/: conftest.py
tests/agent/: test_agent.py  test_tools.py  test_tools_banking.py  test_tools_knowledge.py
tests/julius_unit_tests/agent/: test_agent.py  test_tools_banking.py  test_tools_knowledge.py  test_tools_reporting.py
tests/julius_unit_tests/application/: test_api.py  test_health.py
tests/julius_unit_tests/domain/: test_knowledge_repositories.py  test_reporting_repositories.py  test_session_repository.py
tests/krabs_e2e_tests/: test_dev_deployment.py  test_live_webhook.py  test_webhook_use_cases.py
tests/krabs_unit_tests/agent/: test_agent.py  test_agent_chat.py  test_tools_banking.py  test_tools_datetime.py  test_tools_knowledge.py  test_tools_reporting.py
tests/krabs_unit_tests/application/: test_api.py  test_health.py
tests/krabs_unit_tests/domain/: test_knowledge_repositories.py  test_reporting_repositories.py  test_session_repository.py
tests/krabs_unit_tests/observability/: test_adapters.py  test_agent.py  test_foundation.py  test_instrumentation.py
tests/services/: test_investec_integration.py
tests/unit/agent/: test_agent.py  (+1 more)
(+46 files in other folders)
