[project]
name = "tjabane-agent-krabs"
version = "0.1.0"
description = "Personal Investec banking agent accessible via WhatsApp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.75.0",
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
    "python-multipart>=0.0.20",
    "azure-cosmos>=4.9.0",
    "azure-communication-email>=1.0.0",
    "azure-keyvault-secrets>=4.8.0",
    "azure-identity>=1.19.0",
    "twilio>=9.4.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "tzdata>=2026.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.14",
    "httpx>=0.28.0",
    "pyyaml>=6.0.3",
    "ruff>=0.15.14",
    "pyright>=1.1.409",
]

[tool.pytest.ini_options]
testpaths = ["tests/krabs_unit_tests", "tests/krabs_integration_tests"]
pythonpath = ["src"]
markers = ["integration: live sandbox tests (require credentials)"]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "B",   # flake8-bugbear: likely bugs and design hazards
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "RUF", # Ruff-specific rules
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    "E501", # handled by formatter; long prompt/tool strings are common here
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "N802", # test method names may mirror behavior phrasing
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
include = ["src", "scripts"]
exclude = [
    ".venv",
    ".python_packages",
    "**/__pycache__",
]
pythonVersion = "3.12"
typeCheckingMode = "standard"
reportMissingTypeStubs = false

[tool.hatch.build.targets.wheel]
sources = ["src"]
packages = ["src/krabs_application", "src/krabs_agent", "src/krabs_domain", "src/krabs_services"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
